<resources>
    <!-- Strings de todo el texto que aparece en la aplicacion para poder traducirlo luego-->
    <string name="app_name">Ejercicio5Componentes</string>
    <string name="boton">Botón</string>
    <string name="checkbox" translatable="false">CheckBox</string>
    <string name="text1">ImageButton y botón con icono</string>
    <string name="text2">ToggleButton marcado al arrancar</string>
    <string name="seekbar" translatable="false">SeekBar</string>
    <string name="ratingbar" translatable="false">RatingBar</string>
    <string name="radiobutton" translatable="false">RadioButton</string>
    <string name="desactivo">Desactivo</string>
    <string name="activo">Activo</string>
    <string name="activado">Activado</string>
    <string name="desactivado">Desactivado</string>
    <string name="email"> Introduce tu Email</string>
    <string name="uno" translatable="false">RadioButton1</string>
    <string name="dos" translatable="false">RadioButton2</string>
    <string name="numero" translatable="false">50</string>
    <string name="rating2">RatingBar de la activity secundaria</string>
    <string name="atras">Primaria</string>
    <string name="rating">"El rating de la RatingBar es:  "</string>
    <string name="terciaria" translatable="false">"Terciaria"</string>
    <string name="mncopiar" translatable="false">"Copiar"</string>
    <string name="mnpegar" translatable="false">"Pegar"</string>
    <string name="mnborrar" translatable="false">"Borrar"</string>
    <string name="mnsubmenu" translatable="false">"Submenu"</string>
    <string name="mnopcion1" translatable="false">"Opción 1"</string>
    <string name="mnopcion2" translatable="false">"Opción 2"</string>
    <string name="mnnuevo" translatable="false">"Nuevo"</string>
    <string name="mneditar" translatable="false">"Editar"</string>
    <string name="actionbar" translatable="false">"Action Bar"</string>
</resources>